# get-vanity-address-solana

./: Cargo.toml  README.md  data.json
src/: main.rs
